--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -1,10 +1,15 @@
 @import "tailwindcss";
 
-html, body {
+@theme {
+  --color-cardbg: #16324f;
+}
+
+html,
+body {
   overflow: hidden;
   height: 100%;
   margin: 0;
   padding: 0;
   width: 100%;
-  background: radial-gradient(circle, #001F40 20%, #001220 90%);
+  background: radial-gradient(circle, #001f40 20%, #001220 90%);
 }
