fix(frontend): Stock view ui changes

--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -16,3 +16,25 @@ body {
   width: 100%;
   background: radial-gradient(circle, #001f40 20%, #001220 90%);
 }
+
+.dot {
+  width: 8px;
+  height: 8px;
+  background-color: white;
+  border-radius: 50%;
+  margin: 0 5px;
+  opacity: 0.5;
+}
+
+.dot.active {
+  opacity: 1;
+}
+
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+
+.scrollbar-hide {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
