feat(frontend): Base for overlays (search, filter)

--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -38,3 +38,7 @@ body {
   -ms-overflow-style: none;  /* IE and Edge */
   scrollbar-width: none;  /* Firefox */
 }
+
+.stock-container a {
+  display: none;
+}
